@@ -1,3 +1,7 @@
+Mon Aug  4 12:03:38 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (argstr_get_word): Plug some memory leaks.
+
 Mon Aug  4 01:05:12 BST 2003  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipeline_wait): The return value was a bit
